--- a/public/ie.html
+++ b/public/ie.html
@@ -24,7 +24,7 @@
             <p>拥抱新事物吧！不要使用 IE 了</p>
             <p>Embrace new things! Don't use IE browser</p>
             <p>您可以使用 <a href="https://www.google.com/chrome/">Chrome</a> / <a href="https://www.mozilla.org/zh-CN/firefox/new/">FireFox</a> / <a href="https://www.microsoft.com/zh-cn/edge/">Edge</a></p>
-            <p>祝您使用新事物愉快！ Enoji!</p>
+            <p>祝您使用新事物愉快！ Enjoy!</p>
         </div>
     </body>
 </html>
